--- a/src/MarysToyStore/Views/Home/Product.cshtml
+++ b/src/MarysToyStore/Views/Home/Product.cshtml
@@ -1,5 +1,15 @@
 @model MarysToyStore.Models.Product
 
-<h3>@Model.Name</h3>
-<p>@Model.Description</p>
-<p>Price: $@Model.Price</p>
+@if (Model != null)
+{
+            <div class="productStyles">
+                <h3>@Model.Name</h3>
+                <img class="img-fluid" src="~/lib/images/@Model.ImagePath">
+                <p>@Model.Description</p>
+                <p>Price: $@Model.Price</p>
+            </div>
+}
+else
+{
+            <p>No products have been found with that provided Id.</p>
+}
