--- a/src/MarysToyStore/wwwroot/css/site.css
+++ b/src/MarysToyStore/wwwroot/css/site.css
@@ -16,22 +16,31 @@ img {
     margin-top: 30px;
 }
 
-    .productStyles h3 {
-        font-size: 30px;
-        font-weight: 700;
-    }
+.productStyles h3 {
+    font-size: 30px;
+    font-weight: 700;
+}
 
-    .productStyles p:first-of-type {
-        margin-top: 15px;
-    }
+.productStyles p:first-of-type {
+    margin-top: 15px;
+}
 
-    .productStyles p:last-of-type {
-        font-weight: 500;
-    }
+.productStyles p:last-of-type {
+    font-weight: 500;
+}
 
-    .productStyles p {
-        font-size: 25px;
-    }
+.productStyles p {
+    font-size: 25px;
+}
+
+.card {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-bottom: 30px !important;
+    display: inline-block;
+    width: 33%;
+    padding: 0;
+}
 
 footer {
     color: gray;
