--- a/src/MarysToyStore/Views/Account/Login.cshtml
+++ b/src/MarysToyStore/Views/Account/Login.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model LoginViewModel
+
+<h2>Login</h2>
+
+<div class="form-horizontal">
+
+	<form method="post">
+		<div class="mb-3">
+			<label asp-for="EmailAddress"></label>
+			<input asp-for="EmailAddress" class="form-control" />
+			<span asp-validation-for="EmailAddress"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="Password"></label>
+			<input asp-for="Password" class="form-control" />
+			<span asp-validation-for="Password"></span>
+		</div>
+
+		<div asp-validation-for="All"></div>
+
+		<p>
+			<button type="submit" class="btn btn-primary" role="button">Login</button>
+			<a asp-controller="Account" asp-action="Register">Create new account</a>
+		</p>
+	</form>
+
+</div>
