--- a/src/MarysToyStore/Views/Shared/_Layout.cshtml
+++ b/src/MarysToyStore/Views/Shared/_Layout.cshtml
@@ -23,19 +23,22 @@
 					<li class="nav-item">
 						<a asp-controller="Home" asp-action="Products" class="nav-link" role="button">Products</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Admin
-						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="adminDropdown">
-							<li>
-								<a asp-controller="Admin" asp-action="Brands" class="dropdown-item" role="button">Brands</a>
-							</li>
-							<li>
-								<a asp-controller="Admin" asp-action="Products" class="dropdown-item" role="button">Products</a>
-							</li>
-						</ul>
-					</li>
+					@if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+					{
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Admin
+							</a>
+							<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="adminDropdown">
+								<li>
+									<a asp-controller="Admin" asp-action="Brands" class="dropdown-item" role="button">Brands</a>
+								</li>
+								<li>
+									<a asp-controller="Admin" asp-action="Products" class="dropdown-item" role="button">Products</a>
+								</li>
+							</ul>
+						</li>
+					}
 				</ul>
 				<partial name="_LoginPartial" />
 			</div>
