7Mary's Toy Store

--- a/src/MarysToyStore/Views/Admin/Brands.cshtml
+++ b/src/MarysToyStore/Views/Admin/Brands.cshtml
@@ -12,7 +12,7 @@
         {
             <tr>
                 <td>@item.Name</td>
-                <td><a asp-controller="admin" asp-action="editbrand" asp-route-id="@item.Id">Edit</a></td>
+                <td><a asp-controller="Admin" asp-action="editbrand" asp-route-id="@item.Id">Edit</a></td>
             </tr>
         }
     </table>
