--- a/src/MarysToyStore/Views/Shared/_Layout.cshtml
+++ b/src/MarysToyStore/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
 								<li>
 									<a asp-controller="Admin" asp-action="Products" class="dropdown-item" role="button">Products</a>
 								</li>
+								<li>
+									<a asp-controller="Admin" asp-action="ProductCategories" class="dropdown-item" role="button">Product Categories</a>
+								</li>
 							</ul>
 						</li>
 					}
