--- a/src/MarysToyStore/Views/Admin/Products.cshtml
+++ b/src/MarysToyStore/Views/Admin/Products.cshtml
@@ -11,7 +11,10 @@
                 <h3 class="card-title">@item.Name, $@item.Price</h3>
                 <p class="card-text">@item.Description</p>
                 <div class="text-center">
-                    <a class="btn btn-primary" asp-controller="Home" asp-action="Product" asp-route-id="@item.Id">View</a>
+                    <div class="btn-group">
+                        <a class="btn btn-primary" asp-controller="Home" asp-action="Product" asp-route-id="@item.Id">View</a>
+                        <a class="btn btn-secondary" asp-controller="Admin" asp-action="EditProduct" asp-route-id="@item.Id">Edit</a>
+                    </div>
                 </div>
             </div>
         </div>
