--- a/src/MarysToyStore/Views/Admin/AddProduct.cshtml
+++ b/src/MarysToyStore/Views/Admin/AddProduct.cshtml
@@ -22,6 +22,10 @@
             <select asp-for="Product.BrandId" asp-items="@(new SelectList(Model.Brands, "Id", "Name"))" class = "form-control"></select>
             <span asp-validation-for="Product.Brand"></span>
         </div>
+        <div class="form-group mb-3">
+            <label asp-for="SelectedProductCategoryIds"></label>
+            <select asp-for="SelectedProductCategoryIds" asp-items='@(new MultiSelectList(Model.AllProductCategories, "Id", "Name"))' multiple="multiple" class="form-control"></select>
+        </div>
 
         <div asp-validation-summary="All"></div>
         <p>
