--- a/src/MarysToyStore/Views/Admin/EditProduct.cshtml
+++ b/src/MarysToyStore/Views/Admin/EditProduct.cshtml
@@ -2,7 +2,9 @@
 <h2>Update Product</h2>
 <div class="form-horizontal">
     <form method="post">
-        <div asp-validation-summary="All"></div>
+        <input type="hidden" asp-for="Product.Id" />
+        <input type="hidden" asp-for="Product.ImagePath" />
+
         <div class="form-group mb-3">
             <input type="hidden" asp-for="Product.Id" />
             <label asp-for="Product.Name"></label>
@@ -13,6 +15,20 @@
             <label asp-for="Product.Description"></label>
             <input asp-for="Product.Description" class="form-control" />
             <span asp-validation-for="Product.Description"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Product.Price"></label>
+            <input asp-for="Product.Price" class="form-control" />
+            <span asp-validation-for="Product.Price"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Product.Brand"></label>
+            <select asp-for="Product.BrandId" asp-items="@(new SelectList(Model.Brands, "Id", "Name"))" class="form-control"></select>
+            <span asp-validation-for="Product.Brand"></span>
+        </div>
+        <div class="form-group mb-3">
+            <label asp-for="SelectedProductCategoryIds"></label>
+            <select asp-for="SelectedProductCategoryIds" asp-items='@new MultiSelectList(Model.AllProductCategories, "Id", "Name")' multiple="multiple" class="form-control"></select>
         </div>
         <p>
             <button type="submit" class="btn btn-primary" role="button">Save</button>
