--- a/src/MarysToyStore/Views/Shared/_LoginPartial.cshtml
+++ b/src/MarysToyStore/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,7 @@
 		<span class="navbar-text">
 			Hello, @User.Identity.Name
 		</span>
+			<vc:Cart></vc:Cart>
 		<li>
 			<a asp-controller="Account" asp-action="Logout" class="nav-link" role="button">Logout</a>
 		</li>
