--- a/src/MarysToyStore/Views/_ViewImports.cshtml
+++ b/src/MarysToyStore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MarysToyStore
 @using MarysToyStore.Models
 @using MarysToyStore.DataAccess
+@addTagHelper *, MarysToyStore
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
