--- a/src/MarysToyStore/Views/Home/Product.cshtml
+++ b/src/MarysToyStore/Views/Home/Product.cshtml
@@ -8,6 +8,11 @@
                 <p>@Model.Description</p>
                 <p>Price: $@Model.Price</p>
             </div>
+    <form method="POST" asp-controller="cart" asp-action="addtocart" asp-route-id="@Model.Id">
+        <p>
+            <button type="submit" class="btn btn-primary" role="button">Add to cart</button>
+        </p>
+    </form>
 }
 else
 {
