--- a/src/MarysToyStore/Views/Cart/ViewCart.cshtml
+++ b/src/MarysToyStore/Views/Cart/ViewCart.cshtml
@@ -40,6 +40,9 @@
             </tr>
         }
     </table>
+      <div>
+        <a asp-controller="Cart" asp-action="OrderReview" class="btn btn-primary" role="button">Review Order</a>
+    </div>
 }
 else
 {
