--- a/src/MarysToyStore/Views/Home/Index.cshtml
+++ b/src/MarysToyStore/Views/Home/Index.cshtml
@@ -1,2 +1,22 @@
-
-<h1> Welcome to @ViewBag.ApplicationName ! </h1>
+@model IEnumerable<Product>
+<div>
+    <p>Sort by: <a asp-controller="Home" asp-action="Index" asp-route-sort='@ViewData["NameSortParm"]' asp-route-filter='@Context.Request.Query["filter"]'>Name</a></p>
+</div>
+<div>
+    <p>Sort by: <a asp-controller="Home" asp-action="Index" asp-route-sort='@ViewData["PriceSortParm"]' asp-route-filter='@Context.Request.Query["filter"]'>Price</a></p>
+</div>
+<div>
+    @foreach (var item in Model)
+    {
+        <div class="card col-lg-4">
+            <img class="card-img-top" src="~/lib/images/@item.ImagePath">
+            <div class="card-body">
+                <h3 class="card-title">@item.Name, $@item.Price</h3>
+                <p class="card-text">@item.Description</p>
+                <div class="text-center">
+                    <a class="btn btn-primary" asp-controller="Home" asp-action="Product" asp-route-id="@item.Id">View</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
