--- a/src/MarysToyStore/Views/Home/Index.cshtml
+++ b/src/MarysToyStore/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Product>
+@model PaginatedList<Product>
 <div>
     <p>Sort by: <a asp-controller="Home" asp-action="Index" asp-route-sort='@ViewData["NameSortParm"]' asp-route-filter='@Context.Request.Query["filter"]'>Name</a></p>
 </div>
@@ -20,3 +20,25 @@
         </div>
     }
 </div>
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-controller="Home" 
+   asp-action="Index"
+   asp-route-sort='@Context.Request.Query["sort"]'
+   asp-route-filter='@Context.Request.Query["filter"]'
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   class="btn btn-outline-primary @prevDisabled">
+    Previous
+</a>
+
+<a asp-controller="Home" 
+   asp-action="Index"
+   asp-route-sort='@Context.Request.Query["sort"]'
+   asp-route-filter='@Context.Request.Query["filter"]'
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   class="btn btn-outline-primary @nextDisabled">
+    Next
+</a>
