--- a/src/MarysToyStore/Views/Shared/_Layout.cshtml
+++ b/src/MarysToyStore/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
 							</a>
 							<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="adminDropdown">
 								<li>
+									<a asp-controller="Admin" asp-action="Orders" class="dropdown-item" role="button">Orders</a> 
+								</li>
+								<li>
 									<a asp-controller="Admin" asp-action="Brands" class="dropdown-item" role="button">Brands</a>
 								</li>
 								<li>
