--- a/src/MarysToyStore/Views/Shared/_LoginPartial.cshtml
+++ b/src/MarysToyStore/Views/Shared/_LoginPartial.cshtml
@@ -12,6 +12,9 @@
 					<a asp-controller="Cart" asp-action="OrderHistory" role="button" class="dropdown-item">Orders</a>
 				</li>
 				<li>
+					<a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profile</a>
+				</li>
+				<li>
 					<a asp-controller="Account" asp-action="Logout" role="button" class="dropdown-item">Logout</a>
 				</li>
 			</ul>
